# ocr-cli

./: .gitignore  README.md  build-exe.ps1  build-linux.sh  build-macos.sh  pyproject.toml  rapidocr_cli.spec
.github/workflows/: build.yml
rthooks/: rthook_shapely.py
scripts/: bump_version.py  preload_models.py
src/rapidocr_cli/: cli.py  engine.py  inputs.py  output.py  pdf.py  pdf_quality.py  resume.py  types.py
tests/: conftest.py  test_bump_version_script.py  test_cli_output_encoding.py  test_cli_pdf_integration.py  test_cli_record_serialization.py  test_cli_resource_integration.py  test_cli_resume_integration.py  test_pdf_page_selection.py  test_pdf_text_quality.py  test_version_metadata.py
