[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridis-ocr-cli"
version = "0.1.1"
description = "Standalone OCR CLI built on RapidOCR."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "rapidocr>=3.8.1",
  "onnxruntime>=1.24.4",
  "pymupdf>=1.24.0",
]

[project.scripts]
veridis-ocr-cli = "rapidocr_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
